syntax = "proto3";

package user;

option go_package = "github.com/rx3lixir/user-service/user-grpc/gen/go";

import "google/protobuf/timestamp.proto";

message UserReq {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  bool is_admin = 5;
}

message UserRes {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  bool is_admin = 5;
  google.protobuf.Timestamp created_at = 6;
}

message ListUserRes { repeated UserRes users = 1; }
